--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,9 @@ on:
   push:
     branches:
       - main
-    tags: "*"
   pull_request:
     branches:
       - main
-    tags: "*"
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
@@ -45,7 +43,8 @@ jobs:
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
-          file: lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: lcov.info
 
   docs:
     name: Documentation
