--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,8 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 Distributions = "0.24"
+QuadGK = "2.4"
+StaticArrays = "1.0"
 julia = "1.5"
 
 [extras]
