--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -2,4 +2,8 @@
 BayesianExperiments = "0200d6b2-355c-4cc6-8967-0ef505c43a9c"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+
+[compat]
+BayesianExperiments = "0.2"
