--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,5 +62,6 @@ jobs:
             Pkg.instantiate()'
       - name: Build and deploy
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ssh: ${{ secrets.DOCUMENTER_KEY }}
         run: julia --project=docs/ docs/make.jl
